--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p class="meg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t3 center done">몰타 한달살기</div>
+        <div class="bucket img1-t3 center">몰타 한달살기</div>
         <div class="bucket img2 center">테셋 2등급 이상</div>
         <div class="bucket img2 center">학점 이수하기</div>
         <div class="bucket img1-t4 center">코딩 배우기</div>
